# PrimeToolkit

./: .clangd  .gitignore  .replit  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  push.bat  replit.nix  tatus
src/: api.cpp  api.h  main.cpp
src/core/: factorization.cpp  factorization.h  int128_t.cpp  int128_t.h  primality.cpp  primality.h  prime_core.h  sieve.cpp  sieve.h
src/server/: http_server.cpp  http_server.h  socket.h
web/: app.js  factorization.js  generation.js  i18n.js  index.html  nth.js  primality.js  style.css
